@@ -16,13 +16,16 @@ RUN ./gradlew build || return 0
 FROM openjdk:8
 LABEL author="Ibrahim Bilge <Ibrahim.Bilge@opuscapita.com>"
 
+## setting heap size automatically to the container memory limits
+ENV JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -XshowSettings:vm"
+
 ENV APP_HOME=/usr/app/
 WORKDIR $APP_HOME
 
 COPY --from=TEMP_BUILD_IMAGE $APP_HOME/build/libs/peppol-processor.jar .
 
-HEALTHCHECK --interval=15s --timeout=3s --retries=15 \
+HEALTHCHECK --interval=15s --timeout=30s --start-period=40s --retries=15 \
   CMD curl --silent --fail http://localhost:3038/api/health/check || exit 1
 
 EXPOSE 3038
-ENTRYPOINT ["java","-jar","peppol-processor.jar"]
+ENTRYPOINT exec java $JAVA_OPTS -jar peppol-processor.jar
